finished basic examples of object destructuring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
   <main id="main">
+    <h1>This little kitty:</h1>
     <img src="https://my.vetmatrixbase.com/clients/12679/images/cats-animals-grass-kittens--800x960.jpg">
+    <h1>loves es2015</h1>
   </main>
   <script type="text/javascript" src="assets/scripts/main.bundle.js"></script>
 </body>
